Menu mobile mejorado y componentes links añadidos

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,9 @@
     "paths": {
       "@components/*": ["src/components/*"],
       "@layouts/*": ["src/layouts/*"],
-      "@icons/*": ["src/icons/*"]
-
+      "@icons/*": ["src/icons/*"],
+      "@sections/*": ["src/sections/*"],
+      "@styles/*": ["src/styles/*"]
     }
   }
 }
