--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fontsource/audiowide": "^5.0.19",
+    "@fontsource/capriola": "^5.0.19",
     "@fontsource/russo-one": "^5.0.19",
     "astro": "^4.5.0"
   },
