--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@components/*": ["src/components/*"],
-      "@layouts/*": ["src/layouts/*"],
-      "@icons/*": ["src/icons/*"],
-      "@sections/*": ["src/sections/*"],
-      "@styles/*": ["src/styles/*"]
+      "@*": ["./src/*"],
     }
   }
 }
