--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/cloudflare": "^10.0.2",
     "@fontsource/audiowide": "^5.0.19",
     "@fontsource/capriola": "^5.0.19",
     "@fontsource/russo-one": "^5.0.19",
