--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@fontsource/audiowide": "^5.0.19",
     "@fontsource/capriola": "^5.0.19",
     "@fontsource/russo-one": "^5.0.19",
-    "astro": "^4.5.0"
+    "astro": "^4.5.0",
+    "chart.js": "^4.4.2"
   },
   "devDependencies": {
     "standard": "^17.1.0"
